Added Shop Page

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -14,6 +14,7 @@
         <nav>
             <ul>
                 <li><a href="/frontend/index.html">Home</a></li>
+                <li><a href="/frontend/shop.html">Shop</a></li>
                 <li><a href="/frontend/login.html">Login</a></li>
             </ul>
         </nav>
