Changes to Shop interface

--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop - 8-Bit Donut Den</title>
+    <title>Sweet Pixel Treats</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
         <p>Pixel-perfect pastries for every quest!</p>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="/frontend/index.html">Home</a></li>
                 <li><a href="/frontend/shop.html">Shop</a></li>
                 <li><a href="/frontend/login.html">Login</a></li>
                 <li><a href="/frontend/register.html">Register</a></li>
@@ -22,7 +22,7 @@
         <div class="cart-summary">
             <span class="cart-icon">🛒</span>
             <span id="cart-count" class="cart-count">0</span>
-            <span class="cart-text">Bytes in Cart</span>
+            <span class="cart-text">Donuts in Cart</span>
         </div>
     </header>
 
@@ -32,13 +32,13 @@
             
             <div id="shop-donut-list" class="donut-grid">
                 <!-- Shop donuts will be loaded here by shop.js -->
-                <p class="loading-message">Fetching pixel treats...</p>
+                <p class="loading-message">Loading Donuts ...</p>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 8-Bit Donut Den. All rights reserved.</p>
+        <p>&copy; 2025 Sweet Pixel Treats. All rights reserved.</p>
     </footer>
 
     <script src="shop.js"></script>
