--- a/frontend/register.html
+++ b/frontend/register.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>New Player Registration</h1>
-        <p>Join our pixelated pastry paradise!</p>
+        <p>Join our pixel paradise!</p>
         <nav>
             <ul>
                 <li><a href="/frontend/index.html">Home</a></li>
