--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -28,10 +28,10 @@
 
     <main>
         <section class="donut-list-section">
-            <h2>Our Dungeon's Delights!</h2>
+            <h2>Our Delights!</h2>
             
             <div id="shop-donut-list" class="donut-grid">
-                <!-- Shop donuts will be loaded here by shop.js -->
+                
                 <p class="loading-message">Loading Donuts ...</p>
             </div>
         </section>
